variety pack bugs on mobile display

--- a/HC_Website/client/css/custom.css
+++ b/HC_Website/client/css/custom.css
@@ -242,38 +242,24 @@ fieldset legend {
 	border-radius: 5px;
 	box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.35);
 	border: 1px solid #ccc;
+	z-index: 1000;
 }
 
-#three_cup_gift_table {
-	margin-bottom: 0;
-	
-}
 
-#three_cup_gift_table tbody {
+.three_cup_gift_table {
 	font-weight: 400;
-	font-size: 12px;
+	font-size: 1em;
 	color: black;
 	background-color: #EEEEEE;
-
-}
-#three_cup_gift_table th {
-	font-size: 12.5px;
-	color: #6E6464;
-	background-color: #EEEEEE;
 	border: 0;
-	padding: 5px;
-	padding-left: 15px;
-}
-
-#three_cup_gift_table tr td {
-	border: 0;
-	padding: 0px 0px 2px;
+	padding-bottom: 2px;
 	padding-left: 15px;
 	vertical-align: middle;
+
 }
 
-#three_cup_gift_table input[type="number"] {
-	width: 30px;
+.three_cup_gift_table input[type="number"] {
+	width: 40px;
 }
 
 .product_background{
